# fintaro-mcp

./: .gitignore  NOTICE  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
skills/: README.md
skills/fintaro-belege-upload/: SKILL.md
skills/fintaro-monatsabschluss/: SKILL.md
skills/fintaro-onboarding/: SKILL.md
skills/fintaro-rechnungs-review/: SKILL.md
src/fintaro_mcp/: __init__.py  client.py  config.py  schemas.py  server.py
tests/: test_client.py  test_config.py  test_prompt.py  test_read_tools.py  test_schema_contract.py  test_tool_wrappers.py  test_tools.py
