[project]
name = "fintaro-mcp"
version = "0.1.0"
description = "Fintaro MCP server — read invoices/transactions and upload receipts over the Fintaro API gateway via a scoped ftk_ key."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://fintaro.ai"
Repository = "https://github.com/fintaro-ai/fintaro-mcp"
Issues = "https://github.com/fintaro-ai/fintaro-mcp/issues"

[project.optional-dependencies]
dev = [
    "respx>=0.21",
    "pytest>=8",
]

[project.scripts]
fintaro-mcp = "fintaro_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fintaro_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
